# tokcut

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Dockerfile  INSTALL.md  INSTALL_CN.md  LICENSE  README.md  README_CN.md  SECURITY.md  USAGE.md  USAGE_CN.md  docker-compose.yml  pyproject.toml  tokctu.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
articles/: CSDN.md  WECHAT.md  XIAOHONGSHU.md  ZHIHU.md
config/: default.yaml
docs/: BENCHMARK_REPORT.md
examples/: __init__.py
src/tokcut/: __init__.py  __version__.py  cache.py  compressor.py  config.py  prompt_compressor.py  protector.py  server.py  token_counter.py
tests/: __init__.py
tests/benchmarks/: benchmark.py  deepseek_real_bench.py  local_benchmark.py  real_bench_results.json
